@@ -3,11 +3,12 @@ read -p "Please Enter number of Users : " Users
 read -p "Please Enter Rampup duration : " Rampup
 loopcount=1
 dttime=`date +%d%b%Y_%H%M%S`
-projectpath=C:\PT\Project\IDM
+
+projectpath=/home/engguser/PT/projects/IDM
 ThinkTime=1000
 filename="$ReportfileName"_"$dttime"
-jmxfilename=OpenAM 13.5.2.jmx
-JMETER_HOME=C:\PT\Tools\apache-jmeter-5.1.1\apache-jmeter_1
+jmxfilename="OpenAM.jmx"
+JMETER_HOME=/home/engguser/PT/tools/apache-jmeter
 echo
 echo " ------------------------- Run Setting -------------------"
 echo "Report file :  " $filename
@@ -23,7 +24,7 @@ if [ $yesno == Y ]
 then
         echo "Starting the run"
 
-        JVM_ARGS="-Xms4G -Xmx4G -XX:NewSize=1G -XX:MaxNewSize=1G -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCApplicationStoppedTime -Xloggc:$projectpath/logs/GC/GC_${dttime}.log -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=9005 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.remote.ssl=false -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=$projectpath/logs/GC"  && export JVM_ARGS && sh $JMETER_HOME/bin/jmeter -Jusers=$Users -Jrampup=$Rampup -Jloopcount=$loopcount -JThinkTime=$ThinkTime -Jdirpath=$projectpath -n -t $projectpath/$jmxfilename -l $projectpath/results/$filename.jtl
+        JVM_ARGS="-Xms4G -Xmx4G -XX:NewSize=1G -XX:MaxNewSize=1G -XX:+PrintGCDetails  -Xloggc:$projectpath/logs/GC/GC_${dttime}.log -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=9005 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.remote.ssl=false -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=$projectpath/logs/GC" && export JVM_ARGS &&  sh $JMETER_HOME/bin/jmeter -Jusers=$Users -Jrampup=$Rampup -Jloopcount=$loopcount -JThinkTime=$ThinkTime -Jdirpath=$projectpath -n -t $projectpath/$jmxfilename -l $projectpath/results/$filename.jtl
 	
 	echo 
 	echo "----------------------------------------------------------"
